RESOLVED FIXED282028
AX: RenderSVGInlineText accessibility objects are created in the wrong AXObjectCache
https://bugs.webkit.org/show_bug.cgi?id=282028
Summary AX: RenderSVGInlineText accessibility objects are created in the wrong AXObje...
Tyler Wilcock
Reported 2024-10-23 21:16:31 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-23 21:16:43 PDT
Tyler Wilcock
Comment 2 2024-10-23 21:31:08 PDT
EWS
Comment 3 2024-10-26 16:11:57 PDT
Committed 285730@main (6dbdd5c6af9b): <https://commits.webkit.org/285730@main> Reviewed commits have been landed. Closing PR #35663 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.